# kitconcept-core

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  repository.toml  towncrier.toml
backend/: .gitignore  CHANGELOG.md  Dockerfile.builder  Dockerfile.prod  Makefile  pyproject.toml
docs/: .vale.ini  Makefile  README.md  pyproject.toml
docs/docs/: conf.py  index.md
docs/docs/concepts/: index.md  what-is-core.md
docs/docs/how-to-guides/: blocks-config-ttw.md  ensure-versions-distribution-projects.md  index.md  move-rename-content-objects.md  reindex-content-script.md  release.md  upgrade-dependencies.md  upgrade-distribution-make-upgrade.md  upgrade-distribution.md  upgrade-plone.md
docs/docs/reference/: frontend-styleguide.md  index.md  release.md
docs/styles/config/vocabularies/kitconcept/: accept.txt
frontend/: .eslintignore  .eslintrc.js  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  mrs.developer.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  volto.config.js
news/: +changelogworkflow.internal  +clickableProfileLink.documentation  +docsPython314.internal  +enabledocs.documentation  +ensureversion.documentation  +fixCI.internal  +frontend-styleguide.documentation  +howtoupgradedist.documenation  +importexport.documentation  +move_rename_object_docs.documentation  +reindex_content-docs.documentation  +releasereference.documentation  +update_vlt_implementation_via_styleguide.documentation  +update_vlt_path.documentation  +upgrade.documentation  +upgrade.internal  +upgradedocs.documentation  +vscode.internal  (+4 more)
(+203 files in other folders)
